# pinyinc

./: CMakeLists.txt  LICENSE  README.md
include/: pinyincpp.h
src/: pinyincpp.cpp
