CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pinyincpp VERSION 1.0.0)

# 自定义宏，代码中可以使用 
ADD_DEFINITIONS(-DPINYINCPP_LIBRARY)
 
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

# 查找当前目录下的所有源文件
# 并将名称保存到 DIR_LIB_SRCS 变量
aux_source_directory(${PROJECT_SOURCE_DIR}/src DIR_LIB_SRCS)
 

# 编译动态库
ADD_LIBRARY(${PROJECT_NAME} SHARED ${DIR_LIB_SRCS})

#VERSION 指代动态库版本，SOVERSION 指代 API 版本
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION 1.2 SOVERSION 1)
 
target_include_directories(${PROJECT_NAME} PRIVATE  ${CMAKE_SOURCE_DIR}/include)
 
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${CMAKE_SOURCE_DIR}/include/pinyincpp.h)